--- a/src/styles/journal.css
+++ b/src/styles/journal.css
@@ -71,3 +71,9 @@ body {
     font-size: .9em;
     cursor: pointer;
 }
+
+.journalContainer {
+    margin: 10px;
+    padding: 10px;
+    border: 1px solid rgb(40, 49, 56);
+}
