--- a/src/styles/journal.css
+++ b/src/styles/journal.css
@@ -1,8 +1,52 @@
 body {
     margin: 0px;
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Lora', serif;
+    font-weight: 900;
     background-color: rgb(248, 247, 237);
     color: rgb(40, 49, 56);
+}
+
+
+
+
+.threeBarContainer {
+    position: absolute;
+    cursor: pointer;
+  }
+  
+  .bar1, .bar2, .bar3 {
+    width: 35px;
+    height: 5px;
+    background-color: rgb(248, 247, 237);
+    margin: 6px 6px;
+    transition: 0.4s;
+  }
+  
+  /* Rotate first bar */
+  .change .bar1 {
+    transform: rotate(-405deg) translate(-9px, 6px) ;
+  }
+  
+  /* Fade out the second bar */
+  .change .bar2 {
+    opacity: 0;
+  }
+  
+  /* Rotate last bar */
+  .change .bar3 {
+    transform: rotate(405deg) translate(-8px, -8px) ;
+  }
+
+
+.disappear {
+    opacity: 0;
+    transition: 0.4s;
+} 
+
+
+
+.fieldContainer {
+    transition: 0.4s;
 }
 
 .headingContainer {
@@ -10,7 +54,7 @@ body {
     justify-content: center;
     background-color: rgb(40, 49, 56);
     color: rgb(248, 247, 237);
-    padding: 40px;
+    padding: 40px 40px 80px 40px;
 }
 
 .dateContainer {
@@ -25,7 +69,8 @@ body {
 .dateContainer:hover {
     background-color: rgb(224, 223, 205);
     transition: 0.4s;
-    font-size: 1.5em;
+    /* font-size: 1.3em; */
+    margin: 0px;
 
 }
 
@@ -56,8 +101,8 @@ body {
 .conceptsCoveredContainer:hover {
     background-color: rgb(224, 223, 205);
     transition: 0.4s;
-    font-size: 1.5em;
-
+    /* font-size: 1.3em; */
+    margin: 0px;
 
 }
 
@@ -88,7 +133,8 @@ body {
 .journalEntryContainer:hover {
     background-color: rgb(224, 223, 205);
     transition: 0.4s;
-    font-size: 1.5em;
+    /* font-size: 1.3em; */
+    margin: 0px;
 }
 
 .journalEntryTitle {
@@ -116,7 +162,8 @@ body {
 .moodForTheDayContainer:hover {
     background-color: rgb(224, 223, 205);
     transition: 0.4s;
-    font-size: 1.5em;
+    /* font-size: 1.3em; */
+    margin: 0px;
 }
 
 .moodTitle {
@@ -127,7 +174,6 @@ body {
     background-color: rgb(248, 247, 237);
     border: 1px solid rgb(40, 49, 56);
     outline: none;
-
 }
 
 .moodInput:focus {
@@ -142,7 +188,6 @@ body {
 }
 
 .submitButton {
-
     background-color: rgb(40, 49, 56);
     color: rgb(224, 223, 205);
     border: none;
@@ -171,10 +216,12 @@ body {
     flex-basis: 40%;
     transition: 0.4s;
 
+
 }
 
 .journalContainer:hover {
     background-color: rgb(224, 223, 205);
     flex-basis: 42%;
     transition: 0.4s;
+
 }
